Added QRcode with docker talk link

--- a/overwrites/scss/overwrites.css
+++ b/overwrites/scss/overwrites.css
@@ -5,4 +5,8 @@
   margin: 0;
   vertical-align: middle; }
 
+img.qrCodeLink {
+  max-width: 250px;
+  max-height: 250px; }
+
 /*# sourceMappingURL=overwrites.css.map */
