--- a/overwrites/css/overwrites.css
+++ b/overwrites/css/overwrites.css
@@ -1,7 +1,10 @@
 .reveal section img.logoImage {
   background: none;
   border: none; }
-
 .reveal section img.inlineImage {
   margin: 0;
   vertical-align: middle; }
+
+img.qrCodeLink {
+  max-width: 250px;
+  max-height: 250px; }
