--- a/overwrites/css/overwrites.css
+++ b/overwrites/css/overwrites.css
@@ -1,6 +1,7 @@
 .reveal section img.logoImage {
   background: none;
-  border: none; }
+  border: none;
+  box-shadow: none; }
 .reveal section img.inlineImage {
   margin: 0;
   vertical-align: middle; }
@@ -9,5 +10,3 @@
   max-height: 250px; }
 .reveal pre code.fullHeight {
   max-height: 600px; }
-
-/*# sourceMappingURL=overwrites.css.map */
