--- a/overwrites/scss/overwrites.css
+++ b/overwrites/scss/overwrites.css
@@ -1,6 +1,7 @@
 .reveal section img.logoImage {
   background: none;
-  border: none; }
+  border: none;
+  box-shadow: none; }
 .reveal section img.inlineImage {
   margin: 0;
   vertical-align: middle; }
