--- a/overwrites/scss/overwrites.css
+++ b/overwrites/scss/overwrites.css
@@ -6,9 +6,16 @@
   margin: 0;
   vertical-align: middle; }
 .reveal img.qrCodeLink {
-  max-width: 250px;
-  max-height: 250px; }
+  max-width: 200px;
+  max-height: 200px; }
+  .reveal img.qrCodeLink.small {
+    max-width: 100px;
+    max-height: 100px; }
 .reveal pre code.fullHeight {
   max-height: 600px; }
+
+twitterwidget {
+  margin-left: auto;
+  margin-right: auto; }
 
 /*# sourceMappingURL=overwrites.css.map */
