--- a/overwrites/css/overwrites.css
+++ b/overwrites/css/overwrites.css
@@ -2,20 +2,37 @@
   background: none;
   border: none;
   box-shadow: none; }
+
 .reveal section img.inlineImage {
   margin: 0;
   vertical-align: middle; }
+
+.reveal section img.avatar {
+  width: 20rem;
+  border-radius: 50%;
+  float: left; }
+
 .reveal img.qrCodeLink {
   max-width: 200px;
   max-height: 200px; }
-.reveal img.qrCodeLink.small {
-  max-width: 100px;
-  max-height: 100px; }
+  .reveal img.qrCodeLink.small {
+    max-width: 100px;
+    max-height: 100px; }
+
 .reveal pre code.fullHeight {
   max-height: 600px; }
+
+.reveal:after {
+  display: block;
+  position: absolute;
+  content: "Michal Wojtowicz";
+  background: url("../../images/logos/Pitney_Bowes_2015.svg") 0 0.5rem no-repeat;
+  font-size: 1rem;
+  bottom: 20px;
+  left: 20px;
+  height: 10vh;
+  width: 40%; }
 
 twitterwidget {
   margin-left: auto;
   margin-right: auto; }
-
-/*# sourceMappingURL=overwrites.css.map */
