--- a/overwrites/scss/overwrites.scss
+++ b/overwrites/scss/overwrites.scss
@@ -14,6 +14,12 @@ $smallQrCodeSize: 100px;
       margin: 0;
       vertical-align: middle;
     }
+
+    &.avatar{
+      width:20rem;
+      border-radius:50%;
+      float:left;
+    }
   }
 
   img.qrCodeLink {
@@ -28,6 +34,18 @@ $smallQrCodeSize: 100px;
 
   pre code.fullHeight {
     max-height: 600px;
+  }
+
+  &:after{
+    display: block;
+    position:absolute;
+    content: "Michal Wojtowicz";
+    background: url("../../images/logos/Pitney_Bowes_2015.svg") 0 0.5rem no-repeat;
+    font-size: 1rem;
+    bottom: 20px;
+    left: 20px;
+    height: 10vh;
+    width:40%;
   }
 }
 
