--- a/overwrites/css/overwrites.css
+++ b/overwrites/css/overwrites.css
@@ -32,9 +32,24 @@
   font-size: 1rem;
   bottom: 20px;
   left: 20px;
-  height: 10vh;
+  height: 65px;
   width: 40%; }
 
 twitterwidget {
   margin-left: auto;
   margin-right: auto; }
+
+a.no-shadow {
+  text-shadow: none;
+  box-shadow: none;
+  text-decoration: none;
+}
+a.no-shadow:hover {
+  text-shadow: none;
+  box-shadow: none;
+  text-decoration: none;
+  color: #8b743d;
+}
+a.no-shadow:hover img {
+  box-shadow: none;
+}
