--- a/overwrites/scss/overwrites.scss
+++ b/overwrites/scss/overwrites.scss
@@ -48,7 +48,7 @@ $smallQrCodeSize: 100px;
     font-size: 1rem;
     bottom: 20px;
     left: 20px;
-    height: 10vh;
+    height: 65px;
     width:40%;
   }
 }
@@ -57,5 +57,22 @@ twitterwidget {
   margin: {
     left: auto;
     right: auto;
+  }
+}
+
+a.no-shadow {
+  text-shadow: none;
+  box-shadow: none;
+  text-decoration: none;
+
+  &:hover {
+    text-shadow: none;
+    box-shadow: none;
+    text-decoration: none;
+    color: #8b743d;
+
+    img {
+      box-shadow: none;
+    }
   }
 }
