--- a/overwrites/scss/overwrites.scss
+++ b/overwrites/scss/overwrites.scss
@@ -48,8 +48,48 @@ $smallQrCodeSize: 100px;
     font-size: 1rem;
     bottom: 20px;
     left: 20px;
-    height: 65px;
-    width:40%;
+    background-size: contain;
+    height: 5vh;
+    width: 20vw;
+  }
+}
+
+.lambdaLogo {
+  border: 0 !important;
+  margin: 0 !important;
+  box-shadow: none !important;
+  width: 70px;
+}
+
+#typed-container {
+  position: absolute;
+  bottom: 43px;
+  left: 230px;
+  padding-left: 15px;
+  font-size: 20px;
+  z-index:9999;
+  border-left: 2px solid #ccc;
+  padding-bottom: 3px;
+}
+
+#typed-strings {
+  display: none;
+}
+
+@media all and (max-width: 1024px) {
+  .reveal:after {
+    font-size: .5rem;
+  }
+
+  #typed-container {
+    font-size: .5rem;
+    bottom: 30px;
+    left: calc(20vw + 30px);
+
+    img {
+      max-width: 4vw;
+      max-height: 4vh;
+    }
   }
 }
 
