--- a/overwrites/css/overwrites.css
+++ b/overwrites/css/overwrites.css
@@ -11,8 +11,8 @@
   width: 20rem;
   border-radius: 50%;
   float: left; }
-.reveal section img.avatar.center {
-  float: none; }
+  .reveal section img.avatar.center {
+    float: none; }
 
 .reveal img.qrCodeLink {
   max-width: 200px;
@@ -28,12 +28,13 @@
   display: block;
   position: absolute;
   content: "Michal Wojtowicz";
-  background: url("../../images/logos/Pitney_Bowes_2015.svg") 0 0.5rem no-repeat;
+  background: url("../../images/logos/Mentor-ASB-Logo-Color-Hires.png") left bottom no-repeat;
+  background-size: contain;
   font-size: 1rem;
   bottom: 20px;
   left: 20px;
-  height: 65px;
-  width: 40%; }
+  height: 85px;
+  width: 15vw; }
 
 twitterwidget {
   margin-left: auto;
@@ -42,14 +43,24 @@ twitterwidget {
 a.no-shadow {
   text-shadow: none;
   box-shadow: none;
-  text-decoration: none;
-}
-a.no-shadow:hover {
-  text-shadow: none;
-  box-shadow: none;
-  text-decoration: none;
-  color: #8b743d;
-}
-a.no-shadow:hover img {
-  box-shadow: none;
-}
+  text-decoration: none; }
+  a.no-shadow:hover {
+    text-shadow: none;
+    box-shadow: none;
+    text-decoration: none;
+    color: #8b743d; }
+    a.no-shadow:hover img {
+      box-shadow: none; }
+
+#typed-container {
+  position: absolute;
+  bottom: 2vh;
+  left: 17vw;
+  padding-left: 15px;
+  font-size: 20px;
+  z-index: 9999;
+  border-left: 2px solid #ccc;
+  padding-bottom: 3px; }
+
+#typed-strings {
+  display: none; }
